<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile_menu"
        android:icon="@drawable/ic_user"
        android:tint="@color/dark_gray"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_forms_menu"
        android:icon="@drawable/ic_list"
        android:tint="@color/dark_gray"
        android:title="@string/forms" />
    <item
        android:id="@+id/nav_settings_menu"
        android:icon="@drawable/ic_sliders"
        android:tint="@color/dark_gray"
        android:title="@string/settings"
        android:visible="false" />
    <item
        android:id="@+id/nav_logout_menu"
        android:icon="@drawable/ic_logout"
        android:tint="@color/dark_gray"
        android:title="@string/logout" />
</menu>

