<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".fragment.ConfirmAppointmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/space_lg"
        android:layout_marginEnd="@dimen/space_lg"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/space_lg"
            android:text="@string/review_your_bookin"
            android:textColor="@color/light_blue"
            android:textStyle="bold" 
            android:textAppearance="@style/TextAppearance.Mediconnect.TitleLarge" />

        <!-- Doctor's Details -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_xs"
            android:text="@string/doctor_s_details"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" 
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/doctor_name_mock"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <!-- Appointment Details -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_xs"
            android:text="@string/appointment_details"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" 
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

        <TextView
            android:id="@+id/appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/mock_date"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <TextView
            android:id="@+id/appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_md"
            android:text="@string/mock_time"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <!-- Patient Details -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_xs"
            android:text="@string/patient_details"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" 
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/patient_name_mock"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <TextView
            android:id="@+id/tv_patient_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/phone_number_mock"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <TextView
            android:id="@+id/tv_patient_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/dob_mock"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <!-- Note for Doctor -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_xs"
            android:text="@string/additional_notes"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" 
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

        <TextView
            android:id="@+id/tv_note_for_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_lg"
            android:text="@string/add_notes_mock"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyMedium" />

        <!-- Terms and Conditions -->
        <CheckBox
            android:id="@+id/booking_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_sm"
            android:paddingBottom="@dimen/space_lg"
            android:text="@string/i_accept_the_terms_and_conditions_booking"
            android:textColor="@color/dark_gray" />

        <!-- Confirm Booking Button -->
        <Button
            android:id="@+id/btn_confirm_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_xl"
            android:layout_marginBottom="@dimen/space_lg"
            android:backgroundTint="@color/green"
            android:text="@string/confirm_appointment"
            android:textColor="@color/md_on_primary"
            android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

    </LinearLayout>

</ScrollView>