<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:padding="@dimen/space_lg"
    tools:context=".fragment.CheckinFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <!-- RSVP -->
        <LinearLayout
            android:id="@+id/layout_rsvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upcoming_appointments_text"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" 
                android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:text="@string/doctor_name_mock"
                android:textColor="@color/dark_gray"
                android:textAppearance="@style/TextAppearance.Mediconnect.BodyLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_gray"
                    android:ems="8"
                    android:text="@string/rsvp_no"
                    android:textColor="@color/dark_gray" />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_sm"
                    android:backgroundTint="@color/green"
                    android:ems="8"
                    android:text="@string/rsvp_yes"
                    android:textColor="@color/md_on_primary" />
            </LinearLayout>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_lg">

            <!-- Check In PreAppointmentForm -->
            <LinearLayout
                android:id="@+id/layout_checkin_form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Input Fields -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:hint="@string/current_symptoms"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    android:id="@+id/editTextCurrentSymptoms"
                    android:padding="@dimen/space_md"
                    android:textColor="@color/dark_gray" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:hint="@string/medication_taking"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    android:id="@+id/editTextMedication"
                    android:padding="@dimen/space_md"
                    android:textColor="@color/dark_gray" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:text="@string/recent_symptoms"
                    android:textColor="@color/dark_gray" />

                <!-- Recent Symptoms Checkboxes -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- First Column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBoxFever"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fever"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/checkBoxCough"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cough"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/checkBoxChestPain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chest_pain"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- Second Column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBoxFatigue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fatigue"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/checkBoxShortnessOfBreath"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shortness_of_breath"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/checkBoxHeadache"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/headache"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:hint="@string/additional_notes"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    android:id="@+id/et_note_other"
                    android:padding="@dimen/space_md"
                    android:textColor="@color/dark_gray" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Submit Button -->
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:backgroundTint="@color/green"
                    android:text="@string/submit"
                    android:textColor="@color/md_on_primary" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>